Fixed image alignment in filters section

--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -22,6 +22,9 @@ html {
 
 .image-container {
   overflow: hidden;
+  display: flex;
+  justify-content: center;
+  flex-direction: column;
 }
 
 .image-container img {
@@ -308,6 +311,7 @@ header .mobile {
 #filters-section .images-container {
   max-width: 100%;
   padding: 0 1%;
+  display: flex;
 }
 
 @media only screen and (max-width: 760px) {
